# mpls-garbage-calendar-sls

./: .gitignore  app.py  pyproject.toml  serverless.yml
calendar_service/: calendar_service.py
lambda/: handler.py  pyproject.toml
lambda/mpls_garbage_calendar/: feed_parsing.py  handler.py
lambda/tests/: test_handler.py
mpls_garbage_calendar/: feed_parsing.py  handler.py
stack/: stack.py
tests/: Ex_CalendarRSS.aspx.xml  test_handler.py
