[tool.poetry]
name = "mpls-garbage-calendar"
version = "0.1.0"
description = ""
authors = ["phil kaasa <phil@kaaphi.com>"]

[tool.poetry.dependencies]
python = "~3.9"
feedparser = "^6.0.10"
icalendar = "^4.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
boto3 = "^1.23.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
